# car-tec-cpp

./: .gitignore  README.md
birds_eye/config/: video_segment_warper.yaml
birds_eye/src/: birds_eye_node.py  segment_warper_node.py
board_connection/: CMakeLists.txt
board_connection/include/board_connection/: BoardConnection.hpp  Boardie.hpp
board_connection/launch/: board_connection.launch  board_connection_simul.launch
board_connection/src/: BoardConnection.cpp  Boardie.cpp  board_connection_node.cpp
line_detector/: CMakeLists.txt  package.xml
line_detector/config/: challenge_video.yaml  expo_video.yaml
line_detector/include/line_detector/: Detector.hpp  HoughDetector.hpp  LineDetector.hpp  RoiCutter.hpp  line_detector_hough.py  line_detector_node_impl.py
line_detector/launch/: video.launch
line_detector/src/: Detector.cpp  HoughDetector.cpp  LineDetector.cpp  RoiCutter.cpp  line_detector_node.cpp
master_node/launch/: master_video.launch  simulation.launch
